ingress.yaml
#
# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: eclipse2017
spec:
    backend:
        serviceName: static-nginx
        servicePort: 80
    rules:
      - http:
            paths:
              - path: /*
                backend:
                    serviceName: static-nginx
                    servicePort: 80
              - path: /services/user/*
                backend:
                    serviceName: profile
                    servicePort: 80
              - path: /services/admin/*
                backend:
                    serviceName: admin
                    servicePort: 80
              - path: /services/geo/*
                backend:
                    serviceName: geo
                    servicePort: 80
              - path: /services/photo/*
                backend:
                    serviceName: photo
                    servicePort: 80
    tls:
      - secretName: eclipse2017
